fixed layout issues with lists and resources.

--- a/css/style.css
+++ b/css/style.css
@@ -133,21 +133,34 @@ sidenav{
 	text-decoration: underline;
 	text-decoration-color: black;
 }
+/* main layout */
 main{
 	margin-left: 20%;
 	margin-right: 20%;
 	font-family: 'Open Sans', sans-serif;
 	line-height: 24px;	
 }
-main h1{
-	text-transform: uppercase;
-	text-align: center;
-}
-main a{
-	color: black;
-	letter-spacing: 2px;
-	line-height: 10px;
-}
+	main h1{
+		font-size: 23px;
+		line-height: 20px;
+		text-transform: uppercase;
+		text-align: center;
+	}
+	main h2{
+		font-size: 20px;
+		line-height: 10px;
+		text-transform: uppercase;
+	}
+	main a{
+		color: black;
+		font-size: 17px;
+		line-height: 30px;
+		letter-spacing: inherit;
+		text-decoration: underline;
+	}
+	main a:hover{
+		color: blue;
+	}
 .horz_line{
 	width: 100%;
 	height: 2px;
@@ -175,7 +188,7 @@ main a{
 }
 
 .flex-left {
-	width: 100%;
+	width: 50%;
 	height: auto;
 	margin: 5px;
 	padding: 5px;
@@ -183,7 +196,7 @@ main a{
 	background-color: #F1F1F3;
 }
 .flex-right {
-	width: 100%;
+	width: 50%;
 	margin: 5px;
 	padding: 5px;
 	border: 2px solid black;
@@ -267,22 +280,30 @@ label{
 	mobile-menu a:hover{
 		color: cornflowerblue;
 	}
-	
+	/* main layout code*/
 	main{
 		margin-left: 5%;
 		margin-right: 5%;
 		font-family: 'Open Sans', sans-serif;
 		line-height: 24px;
-		display: flex;
-		flex-direction: column;
-		justify-content: space-around;
-		min-height: 6vh;
-		font-family: 'Open Sans', sans-serif;
 	}
 	main h1{
+		line-height: 8px;
 		text-transform: uppercase;
 		text-align: center;
 		font-size: 20px;
+	}
+	main h2{
+		line-height: 10px;
+		font-size: 18px;
+		text-transform: uppercase;
+	}
+	main a{
+		font-size: 15px;
+		line-height: 35px;
+		font-size: 15px;
+		letter-spacing: inherit;
+		text-decoration: underline;
 	}
 	.imag_left{
 		display: flex;
